# rust_mmap_demo

./: .gitignore  Cargo.toml  README.md  check_unsafe.sh
.github/workflows/: rust.yml
decrypt_log/: Cargo.toml
decrypt_log/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
logger/: Cargo.toml  build.rs
logger/src/: encrypt_util.rs  lib.rs  logger.rs  mmap_config.rs  mmap_writer.rs
logger/tests/: lib.rs
logger/tests/base/: base_test.rs  build_info_test.rs  mod.rs  random_tool.rs
logger/tests/encrypt_util/: encrypt_test.rs  mod.rs
logger/tests/logger/: encrypt_test.rs  export_test.rs  mod.rs  write_test.rs
logger/tests/mmap_config/: config_test.rs
logger/tests/mmap_writer/: delete_expiration_days_test.rs  export_over_hour_test.rs  export_test.rs  mod.rs  write_test.rs
src/: logger.rs  main.rs
tests/logger/: encrypt_test.rs  export_test.rs  write_test.rs
