[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
chrono = "0.4.38"
chrono-tz = "0.8.6"
md5 = "0.7.0"
aes = "0.7.5"
block-modes = "0.8.1"
hex = "0.4.3"

[dev-dependencies]
rand = "0.9.1"
chrono = "0.4.38"
chrono-tz = "0.8.6"
serde = { version = "1.0.210", features = ["derive"] } # serializing and deserializing framework, for json, etc.
serde_json = "1.0.128" # json parser.
serde_repr = "0.1.19"

[build-dependencies]
chrono = "0.4.38"

[lib]
crate-type = ["staticlib", "rlib"]